# shirokane_meetup_opt

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
data/: 入力データデータ定義.xlsx  出力データデータ定義.xlsx
data/raw/: medium_dataset.xlsx  small_dataset.xlsx
docs/: mkdocs.yml
docs/docs/: index.md
notebook/: naive.py  set_cover.py  test_file_loader_sample.py
notebook/models/: naive.py  set_cover.py
src/: __init__.py  consts.py  execute_model.py  io_dataclass.py  loader.py  make_input_data.py  schema.py  write_output_data.py
src/data_processor/: loader.py  make_input_data.py  schema.py  write_output_data.py
src/models/: base.py  base_model.py  naive_model.py
src/optimize_dataclass/: config_dataclass.py  io_dataclass.py
src/scripts/: run_optimize.py
