[project]
name = "shirokane-meetup-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.1",
    "fastapi>=0.115.4",
    "ipykernel>=6.29.5",
    "markdown-katex>=202406.1035",
    "matplotlib>=3.9.2",
    "mkdocs-material>=9.5.43",
    "mkdocs>=1.6.1",
    "nbformat>=5.10.4",
    "ortools>=9.11.4210",
    "pandera[polars]>=0.20.4",
    "plotly>=5.24.1",
    "polars>=1.12.0",
    "pulp>=2.9.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.2",
]
